test/typecheck/errors/mult-visits.boa
o: output sum of int;
o << 1;

visit(input, visitor {
    before Expression, Statement -> o << 1;
    before Statement -> o << 2;
});
